; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_object.c_pager_map_to_phys_contiguous.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_object.c_pager_map_to_phys_contiguous.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64 }

@kernel_pmap = common dso_local global i32 0, align 4
@KERN_FAILURE = common dso_local global i64 0, align 8
@TRUE = common dso_local global i64 0, align 8
@KERN_SUCCESS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @pager_map_to_phys_contiguous(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca %struct.TYPE_6__*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %13 = load i32, i32* @kernel_pmap, align 4
  %14 = load i32, i32* %7, align 4
  %15 = call i32 @pmap_find_phys(i32 %13, i32 %14)
  store i32 %15, i32* %9, align 4
  %16 = load i32, i32* %9, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %20, label %18

18:                                               ; preds = %4
  %19 = load i64, i64* @KERN_FAILURE, align 8
  store i64 %19, i64* %11, align 8
  br label %69

20:                                               ; preds = %4
  %21 = load i32, i32* %5, align 4
  %22 = call %struct.TYPE_6__* @memory_object_control_to_vm_object(i32 %21)
  store %struct.TYPE_6__* %22, %struct.TYPE_6__** %12, align 8
  %23 = load %struct.TYPE_6__*, %struct.TYPE_6__** %12, align 8
  %24 = icmp ne %struct.TYPE_6__* %23, null
  br i1 %24, label %27, label %25

25:                                               ; preds = %20
  %26 = load i64, i64* @KERN_FAILURE, align 8
  store i64 %26, i64* %11, align 8
  br label %69

27:                                               ; preds = %20
  %28 = load %struct.TYPE_6__*, %struct.TYPE_6__** %12, align 8
  %29 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  store i64 %30, i64* %10, align 8
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** %12, align 8
  %32 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = load i64, i64* @TRUE, align 8
  %35 = icmp ne i64 %33, %34
  br i1 %35, label %36, label %44

36:                                               ; preds = %27
  %37 = load %struct.TYPE_6__*, %struct.TYPE_6__** %12, align 8
  %38 = call i32 @vm_object_lock(%struct.TYPE_6__* %37)
  %39 = load i64, i64* @TRUE, align 8
  %40 = load %struct.TYPE_6__*, %struct.TYPE_6__** %12, align 8
  %41 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %40, i32 0, i32 0
  store i64 %39, i64* %41, align 8
  %42 = load %struct.TYPE_6__*, %struct.TYPE_6__** %12, align 8
  %43 = call i32 @vm_object_unlock(%struct.TYPE_6__* %42)
  br label %44

44:                                               ; preds = %36, %27
  %45 = load %struct.TYPE_6__*, %struct.TYPE_6__** %12, align 8
  %46 = load i32, i32* %6, align 4
  %47 = load i32, i32* %9, align 4
  %48 = load i32, i32* %8, align 4
  %49 = call i64 @vm_object_populate_with_private(%struct.TYPE_6__* %45, i32 %46, i32 %47, i32 %48)
  store i64 %49, i64* %11, align 8
  %50 = load i64, i64* %11, align 8
  %51 = load i64, i64* @KERN_SUCCESS, align 8
  %52 = icmp ne i64 %50, %51
  br i1 %52, label %53, label %68

53:                                               ; preds = %44
  %54 = load %struct.TYPE_6__*, %struct.TYPE_6__** %12, align 8
  %55 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %54, i32 0, i32 0
  %56 = load i64, i64* %55, align 8
  %57 = load i64, i64* %10, align 8
  %58 = icmp ne i64 %56, %57
  br i1 %58, label %59, label %67

59:                                               ; preds = %53
  %60 = load %struct.TYPE_6__*, %struct.TYPE_6__** %12, align 8
  %61 = call i32 @vm_object_lock(%struct.TYPE_6__* %60)
  %62 = load i64, i64* %10, align 8
  %63 = load %struct.TYPE_6__*, %struct.TYPE_6__** %12, align 8
  %64 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %63, i32 0, i32 0
  store i64 %62, i64* %64, align 8
  %65 = load %struct.TYPE_6__*, %struct.TYPE_6__** %12, align 8
  %66 = call i32 @vm_object_unlock(%struct.TYPE_6__* %65)
  br label %67

67:                                               ; preds = %59, %53
  br label %68

68:                                               ; preds = %67, %44
  br label %69

69:                                               ; preds = %68, %25, %18
  %70 = load i64, i64* %11, align 8
  ret i64 %70
}

declare dso_local i32 @pmap_find_phys(i32, i32) #1

declare dso_local %struct.TYPE_6__* @memory_object_control_to_vm_object(i32) #1

declare dso_local i32 @vm_object_lock(%struct.TYPE_6__*) #1

declare dso_local i32 @vm_object_unlock(%struct.TYPE_6__*) #1

declare dso_local i64 @vm_object_populate_with_private(%struct.TYPE_6__*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
